EKS_deployment/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app-backend
  template:
    metadata:
      labels:
        app: react-app-backend
    spec:
      containers:
        - name: backend
          image: 197517724303.dkr.ecr.eu-west-1.amazonaws.com/react-app-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: react-app-backend-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: react-app-backend



#kubectl apply -f backend.yaml

#kubectl delete -f backend.yaml
