EKS_deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app-frontend
  template:
    metadata:
      labels:
        app: react-app-frontend
    spec:
      containers:
        - name: frontend
          image: 197517724303.dkr.ecr.eu-west-1.amazonaws.com/react-app-frontend:latest
          ports:
            - containerPort: 80
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: react-app-frontend-service
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-type: "classic"
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 80
#       protocol: TCP
#   selector:
#     app: react-app-frontend
apiVersion: v1
kind: Service
metadata:
  name: react-app-frontend-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: react-app-frontend




#kubectl apply -f frontend.yaml

#kubectl delete -f frontend.yaml
